--- a/src/App.scss
+++ b/src/App.scss
@@ -124,11 +124,39 @@ main{
    img{
     height: 18rem;
     width: 20rem;
+    
    }
 }
 
 
 }
+.carousel{
+    height: 80%;
+    margin-bottom: 3rem;
+    margin-top: 0rem;
+   .span-left{
+       background-color: $blue;
+       color: $blue;
+       position: fixed;
+       left: 3rem;
+   }
+
+}
+.project-card{
+   
+  img{
+      height:25rem;
+      width: 20rem;
+  }
+ 
+    span{
+        color: $blue;
+        font-size: 2rem;
+    }
+    
+}
+
+
 
 
 @media only screen 
@@ -147,7 +175,6 @@ main{
             
         }
        }
-     
         nav{
            
            
@@ -167,12 +194,12 @@ main{
                 position: fixed;
                 top: 7rem;
                 left: 0;
-                width: 100%;
+                min-width: 100%;
                
                 height: 85vh;
                
                 display: grid;
-                grid-template-rows: repeat(4,1fr);
+                grid-template-rows: repeat(5,1fr);
                 grid-template-columns: 1fr;
                 background-color: #333;
                 
@@ -189,6 +216,7 @@ main{
                         justify-items: center;
                     a{
                         font-size: 2rem;
+                        padding: 0;
                         
                     }
                 }
@@ -254,4 +282,5 @@ main{
     }
     
 }
+
 
