--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@ $blue: #043af9;
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,700;1,300&display=swap");
 html,
 body {
+    input{opacity: 0;}
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -276,6 +277,21 @@ main  {
             }
         }
         nav {
+            input{
+                position: absolute;
+                left: 2rem;
+                top: 2rem;
+                height: 2.5rem;
+                width: 2rem;
+                z-index: 2;
+                opacity: 0;
+            }
+
+input:checked ~ ul {
+    transform: none;
+
+}
+
             .hamburger {
                 position: fixed;
                 left: 2rem;
@@ -292,18 +308,14 @@ main  {
                 position: fixed;
                 top: 7rem;
                 left: 0;
-
+                transform: translate(-100%,0);
                 min-width: 100%;
-
                 height: 85vh;
-
                 display: grid;
                 grid-template-rows: repeat(5, 1fr);
                 grid-template-columns: 1fr;
                 background-color: #333;
-
-                display: none;
-
+                transition: transform .5s cubic-bezier(.58,.3,1,.28);
                 li {
                     padding: 0;
 
