--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,9 @@ $blue: #043af9;
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,700;1,300&display=swap");
 html,
 body {
-    input{opacity: 0;}
+    input {
+        opacity: 0;
+    }
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -47,65 +49,55 @@ nav {
     width: 120%;
     ul {
         margin-top: 1rem;
-        padding:0;
+        padding: 0;
         padding-top: 2rem;
         display: grid;
-        
+
         width: 100%;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         li {
-            padding-bottom: .5rem;
-            padding:1rem;
-            .nav-link{
-                padding-bottom: .5rem;
+            padding-bottom: 0.5rem;
+            padding: 1rem;
+            .nav-link {
+                padding-bottom: 0.5rem;
             }
-            .rohit-text{
+            .rohit-text {
                 font-size: 2rem;
                 font-weight: 600;
                 color: $blue;
                 padding: 0;
             }
-           
+
             list-style: none;
             a {
                 text-decoration: none;
                 color: white;
                 font-size: 1.5rem;
                 text-align: start;
-                
-
-                
-                }
-             
+            }
         }
     }
 }
 
-main  {
-
-    .skills-container{
+main {
+    .skills-container {
         margin: 1rem;
         padding: 1rem;
-        display: subgrid;
-        grid-template-columns: 1fr 1fr;
 
+        grid-template-columns: 1fr 1fr;
     }
-    .skills-card{
+    .skills-card {
         margin-top: 1rem;
         width: 28rem;
         height: 24rem;
         margin: 1rem;
         text-align: center;
-        img{
+        img {
             width: 18rem;
             height: 18rem;
-          
-
         }
     }
 
-
-    
     display: grid;
     grid-template-columns: 7fr 5fr;
     height: 55vh;
@@ -159,10 +151,9 @@ main  {
 }
 .carousel {
     height: 70%;
-    margin-bottom:2rem ;
+    margin-bottom: 2rem;
     display: grid;
     justify-content: center;
-
 
     .span-left {
         background-color: $blue;
@@ -174,7 +165,7 @@ main  {
 .project-card {
     width: 24rem;
     img {
-    width: 20rem;
+        width: 20rem;
     }
 
     span {
@@ -187,34 +178,26 @@ main  {
     }
 }
 
-@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
     body {
+        .skills-container {
+            display: grid;
+            width: 100%;
+            overflow-x: hidden;
+            overflow-y: auto;
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
 
-
-
-.skills-container{
-    display: grid;
-    width: 100%;
-    overflow-x: hidden;
-    overflow-y: auto;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-
-
-    .skills-card{
-        width: 28rem;
-        height: 24rem;
-        margin: 1rem;
-        img{
-            width: 18rem;
-            height: 18rem;
-          
-
+            .skills-card {
+                width: 28rem;
+                height: 24rem;
+                margin: 1rem;
+                img {
+                    width: 18rem;
+                    height: 18rem;
+                }
+            }
         }
-    }
-
-}
-
 
         .carousel {
             height: 50%;
@@ -237,15 +220,14 @@ main  {
             span {
                 color: $blue;
                 font-size: 2rem;
-                
             }
         }
 
         main {
-            .send-email-container{
+            .send-email-container {
                 justify-content: center;
                 text-align: center;
-                .send-email{
+                .send-email {
                     margin: 1rem;
                     padding: 1.2rem 1rem;
                 }
@@ -253,15 +235,15 @@ main  {
             width: 90%;
             height: 100%;
             text-align: left;
-           .subtext{
-               font-weight: 100;
-               margin-top: 1rem;
-               font-style: italic;
-           }
+            .subtext {
+                font-weight: 100;
+                margin-top: 1rem;
+                font-style: italic;
+            }
             h1 {
                 font-weight: 600;
             }
-            img{
+            img {
                 margin-bottom: 1rem;
                 margin-top: 0rem;
                 height: 10rem;
@@ -277,7 +259,7 @@ main  {
             }
         }
         nav {
-            input{
+            input {
                 position: absolute;
                 left: 2rem;
                 top: 2rem;
@@ -287,10 +269,9 @@ main  {
                 opacity: 0;
             }
 
-input:checked ~ ul {
-    transform: none;
-
-}
+            input:checked ~ ul {
+                transform: none;
+            }
 
             .hamburger {
                 position: fixed;
@@ -308,14 +289,14 @@ input:checked ~ ul {
                 position: fixed;
                 top: 7rem;
                 left: 0;
-                transform: translate(-100%,0);
+                transform: translate(-100%, 0);
                 min-width: 100%;
                 height: 85vh;
                 display: grid;
                 grid-template-rows: repeat(5, 1fr);
                 grid-template-columns: 1fr;
                 background-color: #333;
-                transition: transform .5s cubic-bezier(.58,.3,1,.28);
+                transition: transform 0.5s cubic-bezier(0.58, 0.3, 1, 0.28);
                 li {
                     padding: 0;
 
@@ -353,27 +334,42 @@ input:checked ~ ul {
     }
 }
 
-@keyframes drawer {
-    0% {
-       
-        left: -29rem;
-    }
-    100% {
-        
-        left: -1rem;
-        margin: 0;
+@media only screen and (min-device-width: 480px) and (max-device-width: 812px) {
+    .skills-container {
+        margin: 1rem;
+        width: 100%;
+        justify-content: center;
         padding: 0;
+
+        .skills-card {
+            margin: 0.5rem;
+            margin-right: 0.5rem;
+            padding: 1rem 0;
+            width: 20rem;
+            align-self: center;
+            justify-self: center;
+        }
     }
-}
-@keyframes drawerClose {
-    100% {
-        top: 7rem;
-        left: -29rem;
+
+    nav {
+        margin-top: 1rem;
+        ul {
+            width: 90%;
+        }
     }
-    0% {
-        top: 7rem;
-        left: -1rem;
-        margin: 0;
-        padding: 0;
+    .column-1 {
+        margin: 1rem;
+
+        p .subtext {
+            font-size: 3rem;
+        }
+    }
+    .hero .card {
+        width: 17rem;
+        height: 19rem;
+        img {
+            width: 15rem;
+            height: 17rem;
+        }
     }
 }
