--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 $blue: #043af9;
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Reenie+Beanie&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,700;1,300&display=swap");
 html,
 body {
@@ -62,10 +63,11 @@ nav {
                 padding-bottom: 0.5rem;
             }
             .rohit-text {
-                font-size: 2rem;
-                font-weight: 600;
+                font-size: 3rem;
+                font-weight: 400;
                 color: $blue;
                 padding: 0;
+                font-family: 'Reenie Beanie', cursive;
             }
 
             list-style: none;
@@ -81,8 +83,9 @@ nav {
 
 main {
     .skills-container {
-        margin: 1rem;
-        padding: 1rem;
+        width: 100%;
+        margin: 0rem;
+        padding: 0rem;
 
         grid-template-columns: 1fr 1fr;
     }
@@ -181,6 +184,8 @@ main {
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
     body {
         .skills-container {
+            justify-content: center;
+            margin: 0;
             display: grid;
             width: 100%;
             overflow-x: hidden;
@@ -191,7 +196,6 @@ main {
             .skills-card {
                 width: 28rem;
                 height: 24rem;
-                margin: 1rem;
                 img {
                     width: 18rem;
                     height: 18rem;
@@ -272,16 +276,38 @@ main {
             input:checked ~ ul {
                 transform: none;
             }
+            input:checked ~ div>div:nth-child(1) {
+               background-color: $blue;
+               transform:  rotate(130deg) ;
+               width: 40px;
+               transform-origin: 18px 7px;              
+                
+            }
+            input:checked ~ div>div:nth-child(2) {
+              display: none;
+                
+            }
+            input:checked ~ div>div:nth-child(3) {
+               background-color: $blue;
+               transform: rotate(-130deg) ;
+               width: 40px;
+               transform-origin:18px -3px;
+               
+            }
 
             .hamburger {
+                cursor: pointer;
                 position: fixed;
                 left: 2rem;
                 top: 2rem;
                 display: grid;
+                width: 50px;
+                height: 40px;
                 .line {
-                    width: 25px;
+                    width: 35px;
                     height: 3px;
                     margin: 3px;
+                    transition: transform .2s  cubic-bezier(0.58, 0.3, 1, 0.28) ;
                 }
             }
             .nav-container {
@@ -334,13 +360,14 @@ main {
     }
 }
 
-@media only screen and (min-device-width: 480px) and (max-device-width: 812px) {
+@media only screen and (min-device-width: 480px) and (max-device-width:1020px) {
     .skills-container {
         margin: 1rem;
         width: 100%;
         justify-content: center;
         padding: 0;
-
+        display: grid;
+        
         .skills-card {
             margin: 0.5rem;
             margin-right: 0.5rem;
