updated hashrouter and about text

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,18 +1,49 @@
 $blue: #043af9;
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Reenie+Beanie&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&family=Reenie+Beanie&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,700;1,300&display=swap");
 html,
 body {
+    .copyright {
+        text-align: center;
+        padding: 1rem;
+    }
     input {
         opacity: 0;
     }
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background: url("./img/background.png");
     font-family: "Poppins", sans-serif;
+    background: url("./img/background.png");
+
     color: white;
     overflow-x: hidden;
+    .about {
+        p {
+            font-size: 1.2rem;
+        }
+
+        margin: 1rem;
+        .about-heading {
+            p .logo-text {
+                font-size: 22px;
+            }
+        }
+        .social-container {
+            margin: 2rem 0;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            transition: transform 0.1s ease;
+
+            .fontawesome {
+                color: rgba(205, 190, 238, 0.7);
+            }
+            .fontawesome:hover {
+                transform: translate(5px, 5px);
+            }
+        }
+    }
 }
 
 .container {
@@ -48,12 +79,11 @@ body {
 
 nav {
     width: 120%;
+    margin-top: 0;
     ul {
-        margin-top: 1rem;
+        margin-top: 1.5rem;
         padding: 0;
-        padding-top: 2rem;
         display: grid;
-
         width: 100%;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         li {
@@ -67,7 +97,7 @@ nav {
                 font-weight: 400;
                 color: $blue;
                 padding: 0;
-                font-family: 'Reenie Beanie', cursive;
+                font-family: "Reenie Beanie", cursive;
             }
 
             list-style: none;
@@ -82,23 +112,24 @@ nav {
 }
 
 main {
-    .skills-container {
-        width: 100%;
-        margin: 0rem;
-        padding: 0rem;
-
-        grid-template-columns: 1fr 1fr;
-    }
     .skills-card {
         margin-top: 1rem;
-        width: 28rem;
-        height: 24rem;
+        transition: transform 0.5s ease;
+        width: 22rem;
+        height: 22rem;
         margin: 1rem;
         text-align: center;
+
         img {
             width: 18rem;
             height: 18rem;
         }
+    }
+    .skills-card:hover {
+        transform: translateX(-30px);
+    }
+    .skills-card:active {
+        transform: translateX(-30px);
     }
 
     display: grid;
@@ -181,11 +212,12 @@ main {
     }
 }
 
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+@media only screen and (min-device-width: 320px) and (max-device-width: 1024px) {
     body {
         .skills-container {
+            align-items: center;
             justify-content: center;
-            margin: 0;
+
             display: grid;
             width: 100%;
             overflow-x: hidden;
@@ -196,6 +228,8 @@ main {
             .skills-card {
                 width: 28rem;
                 height: 24rem;
+                
+                justify-self: center;
                 img {
                     width: 18rem;
                     height: 18rem;
@@ -276,23 +310,20 @@ main {
             input:checked ~ ul {
                 transform: none;
             }
-            input:checked ~ div>div:nth-child(1) {
-               background-color: $blue;
-               transform:  rotate(130deg) ;
-               width: 40px;
-               transform-origin: 18px 7px;              
-                
+            input:checked ~ div > div:nth-child(1) {
+                background-color: $blue;
+                transform: rotate(130deg);
+                width: 40px;
+                transform-origin: 18px 7px;
             }
-            input:checked ~ div>div:nth-child(2) {
-              display: none;
-                
+            input:checked ~ div > div:nth-child(2) {
+                display: none;
             }
-            input:checked ~ div>div:nth-child(3) {
-               background-color: $blue;
-               transform: rotate(-130deg) ;
-               width: 40px;
-               transform-origin:18px -3px;
-               
+            input:checked ~ div > div:nth-child(3) {
+                background-color: $blue;
+                transform: rotate(-130deg);
+                width: 40px;
+                transform-origin: 18px -3px;
             }
 
             .hamburger {
@@ -307,13 +338,13 @@ main {
                     width: 35px;
                     height: 3px;
                     margin: 3px;
-                    transition: transform .2s  cubic-bezier(0.58, 0.3, 1, 0.28) ;
+                    transition: transform 0.2s cubic-bezier(0.58, 0.3, 1, 0.28);
                 }
             }
             .nav-container {
                 z-index: 1;
                 position: fixed;
-                top: 7rem;
+                top: 5rem;
                 left: 0;
                 transform: translate(-100%, 0);
                 min-width: 100%;
@@ -325,7 +356,7 @@ main {
                 transition: transform 0.5s cubic-bezier(0.58, 0.3, 1, 0.28);
                 li {
                     padding: 0;
-
+                    transition: transform 0.1s ease-in-out;
                     align-self: center;
                     justify-content: center;
                     justify-self: center;
@@ -333,7 +364,10 @@ main {
                     justify-items: center;
                     a {
                         font-size: 2rem;
-                        padding: 0;
+                        padding: 0rem;
+                        &:hover {
+                            transform: translate(5px, 5px);
+                        }
                     }
                 }
             }
@@ -356,47 +390,6 @@ main {
                     width: 18rem;
                 }
             }
-        }
-    }
-}
-
-@media only screen and (min-device-width: 480px) and (max-device-width:1020px) {
-    .skills-container {
-        margin: 1rem;
-        width: 100%;
-        justify-content: center;
-        padding: 0;
-        display: grid;
-        
-        .skills-card {
-            margin: 0.5rem;
-            margin-right: 0.5rem;
-            padding: 1rem 0;
-            width: 20rem;
-            align-self: center;
-            justify-self: center;
-        }
-    }
-
-    nav {
-        margin-top: 1rem;
-        ul {
-            width: 90%;
-        }
-    }
-    .column-1 {
-        margin: 1rem;
-
-        p .subtext {
-            font-size: 3rem;
-        }
-    }
-    .hero .card {
-        width: 17rem;
-        height: 19rem;
-        img {
-            width: 15rem;
-            height: 17rem;
         }
     }
 }
