copyright alignment in mobile and desktop mode

--- a/src/App.scss
+++ b/src/App.scss
@@ -66,6 +66,11 @@ body {
             }
         }
     }
+    .skills-container{
+        display: grid;
+        height: 120vh;
+
+    }
 }
 
 .container {
