copyright alignment in mobile and desktop mode on home

--- a/src/App.scss
+++ b/src/App.scss
@@ -73,13 +73,14 @@ body {
     }
 }
 
+
 .container {
     width: 100%;
     height: 100vh;
 }
 
 .hamburger {
-    position: fixed;
+    position: sticky;
     left: 2rem;
     top: 2rem;
     display: none;
@@ -161,7 +162,15 @@ main {
 
     display: grid;
     grid-template-columns: 7fr 5fr;
-    height: 55vh;
+    grid-template-rows: 1fr 1fr;
+    .hero-copyright{
+
+        margin-top:2rem;
+        display:grid;
+        justify-content: end;
+        width:100%
+    }
+    height: 70vh;
     gap: 1rem;
 
     .column-1 {
@@ -403,6 +412,8 @@ main {
         .hero {
             width: 100%;
             display: grid;
+            height: 120vh;
+            scroll-behavior: smooth;
             justify-items: center;
             grid-template-rows: repeat(12, 1fr);
             grid-template-columns: repeat(1, 1fr);
@@ -410,7 +421,9 @@ main {
             .send-email-container {
                 margin: 1rem;
             }
-
+            .hero-copyright{
+                justify-content: center;
+            }
             .card {
                 img {
                     height: 16rem;
